@@ -177,15 +177,18 @@ extern "C" {
 
 #if !defined (RC_INVOKED) && !defined (_INC_WTIME_INL)
 #define _INC_WTIME_INL
+  wchar_t *__cdecl _wctime(const time_t *);
 #ifdef _USE_32BIT_TIME_T
 #ifndef __CRT__NO_INLINE
-__CRT_INLINE wchar_t *__cdecl _wctime(const time_t *_Time) { return _wctime32(_Time); }
+  wchar_t *__cdecl _wctime(const time_t *);
+  __CRT_INLINE wchar_t *__cdecl _wctime(const time_t *_Time) { return _wctime32(_Time); }
 #else
 #define _wctime _wctime32
 #endif /* __CRT__NO_INLINE */
 #else
 #ifndef __CRT__NO_INLINE
-__CRT_INLINE wchar_t *__cdecl _wctime(const time_t *_Time) { return _wctime64(_Time); }
+  wchar_t *__cdecl _wctime(const time_t *);
+  __CRT_INLINE wchar_t *__cdecl _wctime(const time_t *_Time) { return _wctime64(_Time); }
 #else
 #define _wctime _wctime64
 #endif /* __CRT__NO_INLINE */
